--- a/src/components/navBar/navBar.html
+++ b/src/components/navBar/navBar.html
@@ -2,25 +2,25 @@
   <div class="hamburger" id="hamburger" onclick="toggleMenu()">☰</div>
 
   <div class="navBar" id="navBar">
-    <a class="textNavBar" href="viewProfile.html" data-page="viewProfile.html"
+    <a class="textNavBar" href="/src/viewProfile.html" data-page="/src/viewProfile.html"
       >Visualizar Perfil</a
     >
     <a
       class="textNavBar"
-      href="exerciseList.html"
+      href="/src/exerciseList.html"
       data-page="exerciseList.html"
       >Lista de Exercícios</a
     >
-    <a class="textNavBar" href="imc.html" data-page="imc.html"
+    <a class="textNavBar" href="/src/imc.html" data-page="/src/imc.html"
       >Calculadora de IMC</a
     >
-    <a class="textNavBar" hre="login.html" data-page="login.html">Login</a>
-    <a class="textNavBar" hre="register.html" data-page="register.html"
+    <a class="textNavBar" hre="/src/login.html" data-page="/src/login.html">Login</a>
+    <a class="textNavBar" hre="/src/register.html" data-page="/src/register.html"
       >Cadastre-se</a
     >
     <a
       class="textNavBar"
-      hre="professionalProfile.html"
+      hre="/src/professionalProfile.html"
       data-page="professionalProfile.html"
       >Ver Perfis Profissionais</a
     >
